# spotatui

./: .all-contributorsrc  .coderabbit.yaml  .gitignore  .gitmodules  .luacheckrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  PLUGINS.md  README.md  announcements.json  context7.json  flake.nix  progress.md
.github/workflows/: cd.yml  ci.yml  desktop-gui.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: gui.toml
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
aur/: PKGBUILD
docs/: native-streaming.md  scripting.md
examples/plugins/: README.md
src/: app.rs  config.rs  gui.rs  lib.rs  macos_media.rs  main.rs  network.rs  redirect_uri.html  runtime.rs  user_config.rs
src/audio/: analyzer.rs
src/cli/: cli_app.rs  handle.rs  plugin.rs  update.rs  util.rs
src/core/: app.rs  auth.rs  mod.rs  persisted_playback.rs  playback_metadata.rs  playback_target.rs  plugin_api.rs  queue.rs  source.rs  user_config.rs
src/handlers/: artists.rs  common_key_events.rs  input.rs  made_for_you.rs  mod.rs  playlist.rs  search_results.rs  track_table.rs  update_prompt.rs
src/infra/: discord_rpc.rs  history.rs  macos_media.rs  media_metadata.rs  mod.rs  mpris.rs  redirect_uri.rs
src/player/: streaming.rs
src/tui/: actions.rs  mod.rs  runner.rs  runtime.rs
src/ui/: audio_analysis.rs  mod.rs  settings.rs  util.rs
temp/: bug-report.md
(+79 files in other folders)
