[package]
name = "spotagui"
version = "0.38.1"
description = "Cross-platform desktop GUI for spotatui"
authors = ["LargeModGames <LargeModGames@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/LargeModGames/spotatui"
publish = false

[lib]
name = "spotagui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "spotagui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync"] }
spotatui = { path = "../../..", default-features = false, features = ["telemetry", "streaming"], optional = true }

[features]
default = ["custom-protocol", "spotatui-backend"]
custom-protocol = ["tauri/custom-protocol"]
spotatui-backend = ["dep:spotatui"]
